syntax = "proto3";
package auth;

message RequestAuth {
    string name = 1;
}

message ResponseAuth {
    bool authenticated = 1;
}

service AuthService {
    rpc Auth (RequestAuth) returns (ResponseAuth);
}
